Fix includedDefinitions, handle definition change in context switch AcceptedPublic

Fix includedDefinitions, handle definition change in context switch.
They were missing, see PHP/HTML.
I cleaned up the code a bit to just use QVector, no need for a queue, the order is anyways arbitrary (but stable).

BUG: 397659

Differential Revision: https://phabricator.kde.org/D14952